# my-page

./: .gitignore  README.md  blog.sln  package.json
.github/: README.md
.github/nginx/: blog  blog.conf  dev  portfolio.conf  root.conf  (+1 more)
Blog/: Program.cs  docker-compose.yml
Blog/backend/: .gitignore  Cargo.toml  Dockerfile
Blog/backend/migrations/: 20251031023405_create_users.sql  20251102004826_create_sessions.sql  20251111060713_create_media_tables.sql  20251121113049_create_posts.sql
Blog/backend/src/: lib.rs  main.rs
Blog/backend/src/application/commands/: auth.rs  media.rs  post.rs  user.rs
Blog/backend/src/application/services/: auth.rs  media.rs  post.rs  user.rs
Blog/backend/src/domain/entities/: auth.rs  media.rs  mod.rs  post.rs  secret.rs  user.rs  value_objects.rs
Blog/backend/src/domain/errors/: auth.rs  media.rs  mod.rs  post.rs  user.rs
Blog/backend/src/helper/: string.rs
Blog/backend/src/infrastructure/web/api/: misc.rs  mod.rs  router.rs
Blog/backend/src/infrastructure/web/api/handlers/: auth.rs  common.rs  media.rs  mod.rs  post.rs  user.rs
Blog/backend/src/infrastructure/web/api/middlewares/: auth.rs
Blog/backend/src/infrastructure/web/api/secrets/: mod.rs
Blog/backend/src/infrastructure/web/api/services/: auth.rs  media.rs  post.rs  user.rs
Blog/backend/src/infrastructure/web/server/: mod.rs
blog/: README.md  docker-compose.yml
blog/backend/: .env  .gitignore  Cargo.toml  Dockerfile  backup.sh  example.env  fly.toml  readme.md
blog/backend/data/: blog.db
blog/backend/migrations/: 20251203174451_create_comments.sql  20251207194551_extend_user_meta.sql  20260108004249_extend_series.sql  20260108163319_create_series_post.sql  20260202222928_create_post_stats.sql
blog/backend/src/: main.rs
blog/backend/src/application/: mod.rs
blog/backend/src/application/commands/: dashboard.rs  media.rs  post.rs  series.rs  user.rs
blog/backend/src/application/services/: dashboard.rs  media.rs  mod.rs  post.rs  series.rs
blog/backend/src/domain/entities/: auth.rs  dashboard.rs  mail.rs  media.rs  mod.rs  post.rs  series.rs  user.rs  value_objects.rs
blog/backend/src/domain/errors/: mail.rs  mod.rs  post.rs  series.rs
blog/backend/src/helper/: string.rs
blog/backend/src/infrastructure/persistence/: dashboard.rs  media.rs  post.rs  series.rs  user.rs
blog/backend/src/infrastructure/web/: mod.rs
blog/backend/src/infrastructure/web/api/: mod.rs  router.rs
blog/backend/src/infrastructure/web/api/handlers/: auth.rs  dashboard.rs  mail.rs  media.rs  mod.rs  post.rs  series.rs  user.rs
blog/backend/src/infrastructure/web/api/middlewares/: auth.rs
blog/backend/src/infrastructure/web/api/services/: media.rs  post.rs  series.rs  user.rs
blog/backend/src/infrastructure/web/graphql/: schema.rs
blog/backend/src/infrastructure/web/server/: mod.rs
journal-logs/: 2026-04-09-flyio-cloudflare-migration.md  2026-04-10-oracle-cloud-migration.md
portfolio/: .svgrrc.json  README.md  bun-env.d.ts  package-lock.json  package.json  wrangler.jsonc
socket-server/: .gitignore  Dockerfile  README.md  fly.toml  go.mod  main.go  package-lock.json  package.json  server.js
(+321 files in other folders)
