[package]
name = "backend"
version = "0.1.0"
edition = "2024"


[dependencies]
async-trait = "0.1.89"
axum = { version = "0.8.6", features = ["macros"] }
axum-extra = { version = "0.12.0", features = ["cookie"] }
bcrypt = "0.17.1"
chrono = { version = "0.4.42", features = ["serde"] }
dotenvy = "0.15.7"
hex = "0.4.3"
jsonwebtoken = { version = "10.1.0", features = ["rust_crypto"] }
rand = "0.9.2"
regex = "1.12.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "macros", "sqlite", "postgres", "uuid", "chrono"] }
tokio = { version = "1.48.0", features = ["full"] }
tower = "0.5.2"
tracing = "0.1.41"
uuid = { version = "1.18.1", features = ["serde", "v4"] }
