[package]
name = "backend"
version = "0.1.0"
edition = "2024"


[dependencies]
async-trait = "0.1.89"
axum = { version = "0.8.6", features = ["macros", "multipart"] }
axum-extra = { version = "0.12.0", features = ["cookie"] }
base64 = "0.22.1"
bcrypt = "0.17.1"
chrono = { version = "0.4.42", features = ["serde"] }
dotenvy = "0.15.7"
futures = "0.3.31"
glob = "0.3.3"
hex = "0.4.3"
http = "1.4.0"
jsonwebtoken = { version = "10.1.0", features = ["rust_crypto"] }
lettre = "0.11.19"
once_cell = "1.21.3"
rand = "0.9.2"
regex = "1.12.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "macros", "sqlite", "uuid", "chrono"] }
tokio = { version = "1.48.0", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["fs", "trace", "cors"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
uuid = { version = "1.18.1", features = ["serde", "v4"] }
validator = { version = "0.20.0", features = ["derive"] }
async-graphql = { version = "7", features = ["playground"] }
async-graphql-axum = "7"
